Added responsive for cce and hostel navbar map

--- a/src/app/about/about-data/about-data.component.css
+++ b/src/app/about/about-data/about-data.component.css
@@ -40,3 +40,10 @@ p{
   background-color: var(--detail-color);
   border-radius: 1rem;
 }
+@media (max-width: 500px){
+  ul{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 10px;
+  }
+}
