--- a/src/app/cce/cce-map/cce-map.component.css
+++ b/src/app/cce/cce-map/cce-map.component.css
@@ -1,5 +1,6 @@
 nav{
-  margin: 2rem;
+  width: 95%;
+  margin: 2rem auto;
   padding: 2rem;
   display: flex;
   flex-direction: row;
@@ -13,6 +14,9 @@ section{
   overflow-x: auto;
 }
 span{
+  display: grid;
+  place-items: center;
+  padding: 1rem;
   font-size: 2rem;
   flex: 0.1;
   text-align: center;
@@ -21,16 +25,21 @@ span{
   border-radius: 0.5rem;
   color: var(--background-color);
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
-  opacity: 0.8;
+  opacity: 0.7;
   transition: all 300ms ease-in-out;
   cursor: pointer;
 }
 span:hover{
   opacity: 1;
 }
+.selected{
+  opacity: 1;
+  background-color: var(--main-color);
+}
 div{
+  width: 95%;
   height: 60vh;
-  margin: 2rem 4rem;
+  margin: 0 auto;
   position: relative;
 }
 
@@ -70,4 +79,44 @@ thead{
 }
 .job{
   font-weight: bold;
+}
+@media (max-width: 630px){
+  nav{
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+  .back{
+    grid-column: 1/2;
+    grid-row: 1/4;
+  }
+  .forward{
+    grid-column: 4/5;
+    grid-row: 1/4;
+  }
+  /* span{ */
+  /*   grid-column: 2/3; */
+  /* } */
+  /* .back{ */
+  /*   grid-column: 1/2; */
+  /*   grid-row: 2/4; */
+  /**/
+  /* } */
+  /* button{ */
+  /*   place-items: center; */
+  /* } */
+  /* .forward{ */
+  /*   grid-row: 2/4; */
+  /*   grid-column: 3/4; */
+  /* } */
+  nav{
+    gap: 1rem;
+  }
+
+}
+@media (max-width: 500px){
+
+  nav{
+    gap: 0.5rem;
+  }
 }
