--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -18,17 +18,24 @@ button{
   font-size: 2rem;
   display: none;
 }
+
+
 app-menu-mobile{
-  display: none;
-}
-app-menu-mobile{
+  top: 0;
+  left: 0;
+  visibility: visible;
   z-index: 1;
   position: fixed;
+  opacity: 1;
+  transition: all 300ms ease-in-out;
 
 }
 .hidden{
-    display: none;
+  transform: translateX(-380px);
+  visibility: hidden;
+  opacity: 0;
 }
+
 /*Responsive*/
 @media (max-width: 975px){
   app-navbar{
