--- a/src/app/menu-mobile/menu-mobile.component.css
+++ b/src/app/menu-mobile/menu-mobile.component.css
@@ -27,3 +27,10 @@ nav{
 .active{
   color: var(--main-color);
 }
+input {
+  border: none;
+  padding: 0.7rem;
+  font-size: 2rem;
+  background-color: var(--detail-color);
+  border-radius: 2rem;
+}
