Solved bug with tables and added responsive

--- a/src/app/cce/cce-map/cce-map.component.html
+++ b/src/app/cce/cce-map/cce-map.component.html
@@ -29,6 +29,7 @@
       <td>Email</td>
     </tr>
   </thead>
+  <tbody>
   <tr>
     <td colspan="3" class="title">Comité ejecutivo</td>
   </tr>
@@ -48,5 +49,7 @@
     <td>{{person.name}}</td>
     <td>{{person.email}}</td>  </tr>
   }
+  </tbody>
+
 </table>
 </section>
