--- a/src/app/directory/directory-data/directory-data.component.html
+++ b/src/app/directory/directory-data/directory-data.component.html
@@ -1,36 +1,49 @@
 <span></span>
 <h1>Mesa de primera respuesta</h1>
-<table>
-  @for (person of data; track person){
-  <tr>
-    <td>{{person.name}}</td>
-    <td>{{person.job}}</td>
-    <td>{{person.institution}}</td>
-    <td>{{person.mail}}</td>
-  </tr>
-  }
-</table>
+<div>
+  <table>
+    <tbody>
+      @for (person of data; track person){
+      <tr>
+        <td>{{person.name}}</td>
+        <td>{{person.job}}</td>
+        <td>{{person.institution}}</td>
+        <td>{{person.mail}}</td>
+      </tr>
+      }
+    </tbody>
+  </table>
+</div>
 <span></span>
 <h1>Mesa de Salud, Agua y Saneamiento</h1>
-<table>
-  @for (person of data; track person){
-  <tr>
-    <td>{{person.name}}</td>
-    <td>{{person.job}}</td>
-    <td>{{person.institution}}</td>
-    <td>{{person.mail}}</td>
-  </tr>
-  }
-</table>
+<div>
+  <table>
+    <tbody>
+      @for (person of data; track person){
+      <tr>
+        <td>{{person.name}}</td>
+        <td>{{person.job}}</td>
+        <td>{{person.institution}}</td>
+        <td>{{person.mail}}</td>
+      </tr>
+      }
+    </tbody>
+  </table>
+</div>
+
 <span></span>
 <h1>Mesa de Infraestructura y Servicios</h1>
-<table>
-  @for (person of data; track person){
-  <tr>
-    <td>{{person.name}}</td>
-    <td>{{person.job}}</td>
-    <td>{{person.institution}}</td>
-    <td>{{person.mail}}</td>
-  </tr>
-  }
-</table>
+<div>
+  <table>
+    <tbody>
+      @for (person of data; track person){
+      <tr>
+        <td>{{person.name}}</td>
+        <td>{{person.job}}</td>
+        <td>{{person.institution}}</td>
+        <td>{{person.mail}}</td>
+      </tr>
+      }
+    </tbody>
+  </table>
+</div>
