--- a/src/app/home/home-faq/home-faq.component.css
+++ b/src/app/home/home-faq/home-faq.component.css
@@ -1,8 +1,10 @@
 section {
   height: auto;
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
-section header {
+header {
   height: auto;
   display: flex;
   align-items: center;
@@ -12,42 +14,38 @@ section header {
   padding-top: 3rem;
 }
 
-.title {
+header p {
+  width: 100%;
   height: auto;
+  text-align: center;
   flex-wrap: wrap;
+  font-size: clamp(1rem, 4vw, 2rem);;
+  color: #8c8d8c;
+  font-weight: 400;
 
-  color: #939292;
-  font-size: 2rem;
-  padding: 0;
+  padding: 2rem;
 }
-
-.text {
-  font-size: 1.5rem;
-  text-wrap: pretty;
-  padding: 1rem;
-}
-
 
 article {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 2rem;
-
-  padding-top: 1rem;
+  padding: 1rem;
 
   transition: all 0.6s ease-in-out;
 }
 
 .close {
+  min-width: 30rem;
   width: 60vw;
-  height: 4rem;
+  min-height: 4rem;
+  height: auto;
 
   display: flex;
   align-items: center;
-  gap: 2rem;
-  padding-left: 2rem;
+  padding: 1rem;
+  gap: 1rem;
 
   font-size: 1.5rem;
 
@@ -56,14 +54,14 @@ article {
   border-radius: 20px;
 
   cursor: pointer;
-
 }
 
 .close p {
   color: #777777;
 }
 
-.answer{
+.answer {
+  min-width: 20rem;
   width: 50vw;
   height: auto;
 
@@ -71,20 +69,18 @@ article {
 
   font-size: 1.5rem;
 
-  Display: flex;
+  display: flex;
   align-items: center;
   text-align: center;
+  text-wrap: pretty;
+  padding: 1rem;
 
   background-color: #fefeff;
-  box-shadow: 0px 1px 2px -1px rgba(1,0,0,0.6);
+  box-shadow: 0px 1px 2px -1px rgba(1, 0, 0, 0.6);
 
   color: #777777;
   border-radius: 20px;
-
-
-
 }
-
 
 .question .open {
   display: none;
@@ -95,7 +91,7 @@ article {
   padding: 2rem;
 }
 
-.close.active{
+.close.active {
   background-color: #39dff8;
   color: #eeeeef;
 }
@@ -103,6 +99,3 @@ article {
 .close.active p {
   color: #eeeeef;
 }
-
-
-
