--- a/src/app/home/home-faq/home-faq.component.html
+++ b/src/app/home/home-faq/home-faq.component.html
@@ -1,65 +1,26 @@
 <section>
-    <header>
-        <div class="general__title">
-            <h2>Preguntas frecuentes</h2>
-        </div>
-        <p class="text">
-            Los usuarios encontrarán en este segmento un compendio de preguntas y respuestas de los cuestionamientos más frecuentes que son consultados. Lo que se pretende es fomentar la educación y la formación de ciudadanos responsables.
-        </p>
-    </header>
-    <article id="faq1" class="question" (click)="toggleItem('faq1')">
-        <div class="close">
-            <fa-icon [icon]="faIcon1"></fa-icon>
-            <p>Esta es una pregunta frecuente!!!!</p>
-        </div>
-        <div class="answer open">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. At, temporibus? Voluptates dolor id incidunt magnam odit ratione architecto recusandae harum ad quo debitis quidem eveniet, aperiam iure culpa sequi quisquam.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quisquam repudiandae numquam rerum harum ipsam minus itaque tempore, minima tempora quos voluptate reiciendis quae quam fuga molestiae in! Corporis, quis.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat corrupti, mollitia ducimus aliquid suscipit voluptatem iste iure, culpa veritatis eum possimus eos. Fugit earum nulla nihil dolor porro sapiente recusandae!
-            </p>
-        </div>
-    </article>
-    <!-- Repite el mismo formato para cada pregunta frecuente -->
-    <article id="faq2" class="question" (click)="toggleItem('faq2')">
-        <div class="close">
-            <fa-icon [icon]="faIcon2"></fa-icon>
-            <p>Otra pregunta frecuente!!!!</p>
-        </div>
-        <div class="answer open">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. At, temporibus? Voluptates dolor id incidunt magnam odit ratione architecto recusandae harum ad quo debitis quidem eveniet, aperiam iure culpa sequi quisquam.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quisquam repudiandae numquam rerum harum ipsam minus itaque tempore, minima tempora quos voluptate reiciendis quae quam fuga molestiae in! Corporis, quis.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat corrupti, mollitia ducimus aliquid suscipit voluptatem iste iure, culpa veritatis eum possimus eos. Fugit earum nulla nihil dolor porro sapiente recusandae!
-            </p>
-        </div>
-    </article>
-    <article id="faq3" class="question" (click)="toggleItem('faq3')">
-        <div class="close">
-            <fa-icon [icon]="faIcon3"></fa-icon>
-            <p>Otra pregunta frecuente!!!!</p>
-        </div>
-        <div class="answer open">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. At, temporibus? Voluptates dolor id incidunt magnam odit ratione architecto recusandae harum ad quo debitis quidem eveniet, aperiam iure culpa sequi quisquam.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quisquam repudiandae numquam rerum harum ipsam minus itaque tempore, minima tempora quos voluptate reiciendis quae quam fuga molestiae in! Corporis, quis.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat corrupti, mollitia ducimus aliquid suscipit voluptatem iste iure, culpa veritatis eum possimus eos. Fugit earum nulla nihil dolor porro sapiente recusandae!
-            </p>
-        </div>
-    </article>
-    <article id="faq4" class="question" (click)="toggleItem('faq4')">
-        <div class="close">
-            <fa-icon [icon]="faIcon4"></fa-icon>
-            <p>Otra pregunta frecuente!!!!</p>
-        </div>
-        <div class="answer open">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. At, temporibus? Voluptates dolor id incidunt magnam odit ratione architecto recusandae harum ad quo debitis quidem eveniet, aperiam iure culpa sequi quisquam.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quisquam repudiandae numquam rerum harum ipsam minus itaque tempore, minima tempora quos voluptate reiciendis quae quam fuga molestiae in! Corporis, quis.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat corrupti, mollitia ducimus aliquid suscipit voluptatem iste iure, culpa veritatis eum possimus eos. Fugit earum nulla nihil dolor porro sapiente recusandae!
-            </p>
-        </div>
-    </article>
-
-
+  <header>
+    <div class="general__title">
+      <h2>Preguntas frecuentes</h2>
+    </div>
+    <p>
+      Los usuarios encontrarán en este segmento un compendio de preguntas y
+      respuestas de los cuestionamientos más frecuentes que son consultados. Lo
+      que se pretende es fomentar la educación y la formación de ciudadanos
+      responsables.
+    </p>
+  </header>
+  @for (faq of faqs; track faq.id) {
+  <article id="'faq' + faq.id" class="question" (click)="toggleFaq(faq.id)">
+    <div class="close">
+      <fa-icon [icon]="openFaqId === faq.id ? faMinus : faPlus"></fa-icon>
+      <p>{{ faq.question }}</p>
+    </div>
+    <div class="answer open" [class.open]="openFaqId !== faq.id">
+      <p>
+        {{ faq.answer }}
+      </p>
+    </div>
+  </article>
+  }
 </section>
