--- a/src/app/home/home-faq/home-faq.component.css
+++ b/src/app/home/home-faq/home-faq.component.css
@@ -15,15 +15,13 @@ header {
 }
 
 header p {
-  width: 100%;
-  height: auto;
+  font-size: 1.5rem;
   text-align: center;
-  flex-wrap: wrap;
-  font-size: clamp(1rem, 4vw, 2rem);;
-  color: #8c8d8c;
+  text-wrap: pretty;
   font-weight: 400;
+  color: #777777;
 
-  padding: 2rem;
+  padding: 1rem;
 }
 
 article {
