--- a/src/app/home/home-schedule/home-schedule.component.css
+++ b/src/app/home/home-schedule/home-schedule.component.css
@@ -1,41 +1,23 @@
 section {
-    height: auto;
+  height: auto;
   border: none;
   box-shadow: 0px 0px 0px -1px rgba(1, 0, 0, 0.6);
+  padding-bottom: 4rem;
 }
 
-.__title__about {
-  width: 100%;
-  min-height: 10rem;
-  height: auto;
+.__body__about {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
-
-  color: #939292;
-  font-size: 2rem;
-  padding: 0 3%;
+  flex-direction: column;
 }
 
-.__body__about{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-
-}
-
-.__title h2 {
-  width: 100%;
-  text-align: center;
-  margin: 0;
-}
 
 .text {
   font-size: 1.5rem;
   text-align: center;
   text-wrap: pretty;
+  color: #777777;
 
   padding: 1rem;
 }
@@ -49,17 +31,19 @@ article {
 
   padding-top: 1rem;
 
-  transition: all 0.6s ease-in-out;
+  transition: ease-in-out 300ms;
 }
 
 .close {
+  min-width: 30rem;
   width: 60vw;
-  height: 4rem;
+  min-height: 4rem;
+  height: auto;
 
   display: flex;
   align-items: center;
-  gap: 2rem;
-  padding-left: 2rem;
+  padding: 1rem;
+  gap: 1rem;
 
   font-size: 1.5rem;
 
@@ -75,6 +59,7 @@ article {
 }
 
 .answer {
+  min-width: 20rem;
   width: 50vw;
   height: auto;
 
@@ -83,8 +68,12 @@ article {
   font-size: 1.5rem;
 
   display: flex;
+  flex-direction: column;
   align-items: center;
   text-align: center;
+  justify-content: center;
+  text-wrap: pretty;
+  padding: 1rem;
 
   background-color: #fefeff;
   box-shadow: 0px 1px 2px -1px rgba(1, 0, 0, 0.6);
