--- a/src/app/home/home-new/home-new.component.html
+++ b/src/app/home/home-new/home-new.component.html
@@ -1,16 +1,14 @@
 <section>
-    <div class="general__title">
-        <h1>Noticias</h1>
+  <div class="general__title">
+    <h1>Noticias</h1>
+  </div>
+  <div class="img_news">
+    <img src="../../../assets/img/home/notice.webp" alt="" />
+    <div class="news">
+      <h3>Costa Rica enfrenta segunda ola de pandemia de COVID-19</h3>
+      <p>Destacó que los sectores con mayor afectacion son Agricola...</p>
+      <a href="#">Leer más...</a>
     </div>
-    <div class="img_news">
-        <img src="../../../assets/img/home/notice.webp" alt="">
-        <div class="news">
-
-            <h3>Costa Rica enfrenta segunda ola de pandemia de COVID-19</h3>
-            <p>Destacó que los sectores con mayor afectacion son Agricola...</p>
-            <a href="#">Leer más...</a>
-        </div>
-    </div>
+  </div>
 </section>
-
 
