--- a/src/app/home/home-actions/home-actions.component.html
+++ b/src/app/home/home-actions/home-actions.component.html
@@ -1,10 +1,16 @@
-<Section>
-    <div class="general__title">
-        <h2>Que hacer en caso de...</h2>
-    </div>
-    <div class="img">
-        <img src="../../../assets/img/home/ComoNosPreparamos.webp" alt="">
-        <img src="../../../assets/img/home/ComoActuar.webp" alt="">
-        <img src="../../../assets/img/home/ComoActuarInundacion.webp" alt="">
-    </div>
-</Section>
+<section>
+  <div class="general__title">
+    <h2>Que hacer en caso de...</h2>
+  </div>
+  <div class="img-carousel">
+    <button class="prev" (click)="prevSlide()">❮</button>
+    <div class="carousel" [style.transform]="getTransform()">
+      @for (image of images; track image.id) {
+      <div class="carousel-item">
+        <img [src]="image.src" [alt]="image.id" />
+      </div>
+      }
+    </div> 
+    <button class="next" (click)="nextSlide()">❯</button>
+  </div>
+</section>
