--- a/src/app/home/home-new/home-new.component.css
+++ b/src/app/home/home-new/home-new.component.css
@@ -1,60 +1,151 @@
 section {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+  min-height: 75rem;
+  height: auto;
+  margin: 2rem 0;
+  padding: 0 2rem; /* Espaciado desde los bordes */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.title_news {
-    width: 100%;
-    min-height: 10rem;
-    height: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-
-    color: #939292;
-    font-size: 2rem;
-    padding: 3rem;
+.general__title {
+  width: 100%;
+  min-height: 4rem;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  color: #939292;
+  font-size: 3rem;
+  padding: 0 3%;
 }
 
-.title_news h1{
-    width: 100%;
-    text-align: center;
-    margin: 0;
+.img-carousel {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1rem;
 }
 
-.img_news {
-    position: relative;
-    display: inline-block;
-}
-.img_news img {
-    width: 100%; /* Asegúrate de que la imagen ocupe todo el contenedor */
-    vertical-align: top; /* Ajusta la alineación vertical */
-}
-.news {
-    position: absolute;
-    bottom: 10rem;
-    left: 5rem;
-    background-color: rgba(255, 255, 255, 0.35); /* Fondo semi-transparente */
-    padding: 20px;
-    width: auto; /* Ocupa todo el ancho del contenedor */
-    box-sizing: border-box; /* Incluye el padding en el ancho */
-    display: flex;
-    flex-direction: column;
-}
-.news h3,
-.news p,
-.news a {
-    margin: 0;
-    font-size: 1.5rem;
-    color: aliceblue;
+.carousel-wrapper {
+  width: 95%;
+  overflow: hidden;
 }
 
-.news a {
-    display: flex;
-    justify-content: center;
-    color: aqua;
+.carousel {
+  display: flex;
+  transition: transform 0.5s ease;
+  width: 100%;
 }
 
+.carousel-item {
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.news-card {
+  min-height: 45rem;
+  background: #fff;
+  border-radius: 8px;
+  padding: 1rem;
+  padding-bottom: 1rem;
+  text-align: center;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.news-card h3 {
+  padding: 1rem;
+  color: #ff7f00;
+  font-size: 2.5rem;
+}
+
+.news-card img {
+  width: 90%;
+  height: auto;
+  border-radius: 4px;
+  margin: 0.5rem 0;
+}
+
+.news-card p {
+  margin-top: 1rem;
+  font-size: 2rem;
+  color: #6e6e6e;
+}
+
+.news-card .date {
+  font-size: 1.5rem;
+  color: #7f7f7f;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.news-card button {
+  background-color: #00bfff;
+  border: none;
+  color: white;
+  padding: 1rem 1.5rem;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1.5rem;
+  margin-top: 1rem;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+/* Mostrar 3 imágenes en pantallas grandes */
+@media (min-width: 1024px) {
+  .carousel-item {
+    min-width: 33.3333%; /* Ajustado para mostrar 3 tarjetas */
+  }
+}
+
+/* Mostrar 2 imágenes en pantallas medianas */
+@media (min-width: 768px) and (max-width: 1023px) {
+  .carousel-item {
+    min-width: 50%; /* Ajustado para mostrar 2 tarjetas */
+  }
+}
+
+/* Mostrar 1 imagen en pantallas pequeñas */
+@media (max-width: 767px) {
+  .carousel-item {
+    min-width: 100%; /* Ajustado para mostrar 1 tarjeta */
+  }
+
+  .news-card{padding-bottom: 3rem}
+
+  .general__title { 
+    font-size: 2.5rem; 
+  }
+}
+
+button.prev,
+button.next {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: none;
+  font-size: 2rem;
+  cursor: pointer;
+  padding: 1rem;
+  z-index: 2;
+  position: absolute;
+}
+
+button.prev {
+  left: 1rem;
+}
+
+button.next {
+  right: 1rem;
+}
