--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,15 +3,14 @@ div{
   flex-direction: column;
 }
 button{
+  width: 4rem;
+  height: 4rem;
   position: fixed;
-  z-index: 2;
+  z-index: 4;
   top: 2%;
   left: 2%;
-  padding: 1rem;
   border-radius: 50%;
   border: none;
-  letter-spacing: 3rem;
-  text-align: justify;
   transition: all 300ms ease-in-out;
   background-color: var(--title-color);
   color: var(--background-color);
@@ -28,7 +27,6 @@ app-menu-mobile{
   position: fixed;
   opacity: 1;
   transition: all 300ms ease-in-out;
-
 }
 .hidden{
   transform: translateX(-380px);
