--- a/src/app/home/home-new/home-new.component.css
+++ b/src/app/home/home-new/home-new.component.css
@@ -133,19 +133,20 @@ section {
 
 button.prev,
 button.next {
+  height: 20%;
   background-color: rgba(255, 255, 255, 0.8);
   border: none;
   font-size: 2rem;
-  cursor: pointer;
   padding: 1rem;
-  z-index: 2;
+  cursor: pointer;
+  z-index: 900;
   position: absolute;
 }
 
 button.prev {
-  left: 1rem;
+  left: -1rem;
 }
 
 button.next {
-  right: 1rem;
+  right: -1rem;
 }
