--- a/src/app/menu-mobile/menu-mobile.component.css
+++ b/src/app/menu-mobile/menu-mobile.component.css
@@ -1,6 +1,9 @@
 main{
+  position: fixed;
+  z-index: 999;
   font-size: 2rem;
   height: 100vh;
+  width: 90vw;
   background-color: var(--background-color);
   display: flex;
   flex-direction: column;
