--- a/src/app/home/home-aboutme/home-aboutme.component.css
+++ b/src/app/home/home-aboutme/home-aboutme.component.css
@@ -1,104 +1,121 @@
 .main__content {
-    border: none;
-    box-shadow: 2px 0px 5px -1px rgba(1,0,0,0.6);
+  border: none;
+  box-shadow: 2px 0px 5px -1px rgba(1, 0, 0, 0.6);
 }
 
 .__title__about {
-    width: 100%;
-    min-height: 10rem;
-    height: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
+  width: 100%;
+  min-height: 10rem;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 
-    color: #939292;
-    font-size: 2rem;
-    padding: 0 3%;
+  color: #939292;
+  font-size: 2.5rem;
+  padding: 0 3%;
 }
 
-.__title h2{
-    width: 100%;
-    text-align: center;
-    margin: 0;
+.__title h2 {
+  width: 100%;
+  text-align: center;
+  margin: 0;
 }
 
 .__body__about {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    background-color: #eeeeef;
-    padding: 6rem;
-    width: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: #eeeeef;
+  padding: 6rem;
+  width: auto;
 }
 
-.__img{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.__img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-
-    height: auto;
+  height: auto;
 }
 
-.__img img{
-    margin-bottom: 0.5rem;
+.__img img {
+  margin-bottom: 0.5rem;
+  border-radius: 10px;
 }
 
 .__text {
-    width: 100%;
-    min-height: 15rem;
-    height: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    font-size: 2rem;
-    font-weight: 400;
+  width: 100%;
+  min-height: 15rem;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  font-size: 2rem;
+  font-weight: 400;
+  color: #746d6d;
+  padding: 5rem;
 
-    padding: 0 5rem;
-
-    gap: 3rem;
+  gap: 3rem;
 }
 
 .__text p {
-    width: 100%;
-    text-align: center;
-    margin: 0;
+  width: 100%;
+  text-align: center;
+  margin: 0;
 }
 
-
 .__text a {
-    width: 12rem;
-    height: 4rem;
+  width: 12rem;
+  height: 4rem;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    border: none;
-    border-radius: 5px;
-    color: #eeeeef;
-    font-size: 2rem;
-    font-weight: 900;
-    background-color: #ff8b18;
-    box-shadow: 1px 1px 12px -1px rgba(1,0,0,0.6);
+  border: none;
+  border-radius: 5px;
+  color: #eeeeef;
+  font-size: 2rem;
+  font-weight: 900;
+  background-color: #ff8b18;
+  box-shadow: 1px 1px 12px -1px rgba(1, 0, 0, 0.6);
 
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .__text a:hover {
-    background-color: #fe952d;
+  background-color: #fe952d;
 }
-@media (max-width: 1070px){
-  .__body__about{
+@media (max-width: 1070px) {
+}
+
+@media (min-width: 1024px) {
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .__body__about {
     flex-direction: column;
   }
 }
-@media (max-width: 500px){
-  .__body__about{
-    padding: 0;
+
+@media (max-width: 767px) {
+  .__body__about {
+    padding: 4rem;
+    font-size: 1.5rem;
+  }
+  .__body__about {
+    flex-direction: column;
+  }
+  .__title__about{
+    font-size: 2rem;
   }
 
+  .__text{
+    font-size: 1.5rem;
+    padding: 1rem;
+  }
 }
