--- a/src/app/home/home-aboutme/home-aboutme.component.html
+++ b/src/app/home/home-aboutme/home-aboutme.component.html
@@ -1,5 +1,5 @@
 <article class="main__content__about">
-    <div class="general__title">
+    <div class="__title__about">
         <h2>Datos Geograficos</h2>
     </div>
     <div class="__body__about">
