--- a/src/app/admin/login/login.component.html
+++ b/src/app/admin/login/login.component.html
@@ -1,1 +1,40 @@
-<p>login works!</p>
+<div class="registro-container">
+  <div class="registro-form">
+    <div class="escudo">
+        <img src="../../../assets/img/Login/Login.png" alt="Escudo"  />
+    </div>
+    <form class="form"  (ngSubmit)="onSubmit()">
+        <h2>Crear Nueva Cuenta</h2>
+      <div class="form-group">
+        <label for="nombre">Nombre</label>
+        <input
+          id="nombre"
+          formControlName="nombre"
+          type="text"
+          placeholder="Tu nombre"
+        />
+      </div>
+      <div class="form-group">
+        <label for="correo">Correo</label>
+        <input
+          id="correo"
+          formControlName="correo"
+          type="email"
+          placeholder="Tu correo"
+        />
+      </div>
+      <div class="form-group">
+        <label for="contrasena">Contraseña</label>
+        <input
+          id="contrasena"
+          formControlName="contrasena"
+          type="password"
+          placeholder="Contraseña"
+        />
+      </div>
+      <button type="submit" [disabled]="!registroForm.valid">
+        Registrarse
+      </button>
+    </form>
+  </div>
+</div>
