Added aside html and basic css

--- a/src/app/admin/aside/aside.component.html
+++ b/src/app/admin/aside/aside.component.html
@@ -1,1 +1,33 @@
-<p>aside works!</p>
+<aside>
+  <div>
+    <img src="../../../assets/img/Login/Escudo.webp" alt="Escudo de municipalidad">
+    <p>Municipalidad</p>
+    <fa-icon [icon]="faBars"></fa-icon>
+  </div>
+  <nav>
+    <article>
+      <fa-icon [icon]="faHome"></fa-icon>
+      <span>Inicio</span>
+    </article>
+    <article>
+      <fa-icon [icon]="faNews"></fa-icon>
+      <span>Usuarios</span>
+    </article>
+    <article>
+      <fa-icon [icon]="faBuilding"></fa-icon>
+      <span>Albergues</span>
+    </article>
+    <article>
+      <fa-icon [icon]="faSchool"></fa-icon>
+      <span>Comités Comunales</span>
+    </article>
+    <article>
+      <fa-icon [icon]="faBook"></fa-icon>
+      <span>Directorio</span>
+    </article>
+    <article>
+      <fa-icon [icon]="faGear"></fa-icon>
+      <span>Configuraciones</span>
+    </article>
+  </nav>
+</aside>
