Rework admin component

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,8 +1,13 @@
 <main>
   @if(!isLogin()){
-    <app-panel />
-    <app-aside />
+    <div>
+      <app-aside />
+    </div>
   }
-
-  <router-outlet />
+  <section>
+    @if(!isLogin()){
+      <app-panel />
+    }
+    <router-outlet />
+  </section>
 </main>
