--- a/src/app/admin/panel/panel.component.html
+++ b/src/app/admin/panel/panel.component.html
@@ -1,1 +1,9 @@
-<p>panel works!</p>
+<section>
+  <h2></h2>
+  <h1>Panel Administrador</h1>
+  <div>
+    <fa-icon [icon]="faMagnifying"></fa-icon>
+    <fa-icon [icon]="faBell"></fa-icon>
+    <fa-icon [icon]="faEarth"></fa-icon>
+  </div>
+</section>
