--- a/src/app/admin/aside/aside.component.html
+++ b/src/app/admin/aside/aside.component.html
@@ -5,27 +5,27 @@
     <fa-icon [icon]="faBars"></fa-icon>
   </div>
   <nav>
-    <article>
+    <article routerLink='/admin/dashboard'>
       <fa-icon [icon]="faHome"></fa-icon>
       <span>Inicio</span>
     </article>
-    <article>
+    <article routerLink='/admin/usuarios'>
       <fa-icon [icon]="faNews"></fa-icon>
       <span>Usuarios</span>
     </article>
-    <article>
+    <article routerLink='/admin/albergues'>
       <fa-icon [icon]="faBuilding"></fa-icon>
       <span>Albergues</span>
     </article>
-    <article>
+    <article routerLink='/admin/comites'>
       <fa-icon [icon]="faSchool"></fa-icon>
       <span>Comités Comunales</span>
     </article>
-    <article>
+    <article routerLink='/admin/directorio'>
       <fa-icon [icon]="faBook"></fa-icon>
       <span>Directorio</span>
     </article>
-    <article>
+    <article routerLink='/admin/configuraciones'>
       <fa-icon [icon]="faGear"></fa-icon>
       <span>Configuraciones</span>
     </article>
