--- a/src/app/admin/aside/aside.component.css
+++ b/src/app/admin/aside/aside.component.css
@@ -1,15 +1,49 @@
 aside{
+  background-color: var(--detail-color);
+  height: 100vh;
+  padding: 0 2rem;
   display: flex;
   flex-direction: column;
-  font-size: 2rem;
+  font-size: 1.6rem;
 }
 div{
   display: flex;
   align-items: center;
-  gap: 3rem;
+  gap: 1rem;
   padding: 1rem;
 }
-
+div fa-icon{
+  padding: 2rem;
+  color: var(--gray-color);
+  font-size: 2rem;
+}
 img{
-  width: 5rem;
+  width: 4.5rem;
+}
+.active{
+  background-color: var(--main-color);
+}
+
+article{
+  display: flex;
+  flex-direction: row;
+  gap: 1.5rem;
+  background-color: var(--gray-color);
+  border-radius: 1rem;
+  padding: 0.4rem;
+  color: var(--background-color);
+}
+nav{
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+span{
+  display: block;
+}
+nav fa-icon{
+  color: black;
+  flex-basis: 10%;
+  display: block;
+  text-align: center;
 }
