--- a/src/app/admin/aside/aside.component.css
+++ b/src/app/admin/aside/aside.component.css
@@ -1,4 +1,7 @@
 aside{
+  position: relative;
+  z-index: 999;
+  box-shadow: 4px 0 8px 0 rgba(0, 0, 0, 0.2);
   background-color: var(--detail-color);
   height: 100vh;
   padding: 0 2rem;
