Addes property css cursor pointer in aside component

--- a/src/app/admin/aside/aside.component.css
+++ b/src/app/admin/aside/aside.component.css
@@ -38,6 +38,7 @@ article{
   border-radius: 1rem;
   padding: 0.4rem;
   color: var(--background-color);
+  cursor: pointer;
 }
 nav{
   display: flex;
