Minimum error resolution

--- a/src/app/admin/news/news.component.html
+++ b/src/app/admin/news/news.component.html
@@ -1,6 +1,6 @@
 <section>
   <div class="table-container">
-    <h2>Usuarios</h2>
+    <h2>Noticias</h2>
     <div class="search-bar">
       <div class="search">
         <input type="text" placeholder="Usuario" formControlName="searchQuery" />
