--- a/src/app/admin/login/login.component.css
+++ b/src/app/admin/login/login.component.css
@@ -4,7 +4,7 @@
   align-items: center;
 
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   background-color: #f0f0f0;
   padding: 1rem;
   box-sizing: border-box;
