--- a/src/app/admin/signup/signup.component.css
+++ b/src/app/admin/signup/signup.component.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   background-color: #f0f0f0;
   padding: 1rem;
   box-sizing: border-box;
