--- a/src/app/home/home-header/home-header.component.html
+++ b/src/app/home/home-header/home-header.component.html
@@ -1,3 +1,5 @@
 <section>
-  <h1>Lorem ipsum<br> dolor sit amet</h1>
+  <h2>Conoce más sobre</h2>
+  <h1>Comités Comunales de Emergencias</h1>
+  <h2>en el cantón de Golfito</h2>
 </section>
