--- a/src/app/admin/login/login.component.html
+++ b/src/app/admin/login/login.component.html
@@ -3,17 +3,9 @@
     <div class="escudo">
         <img src="../../../assets/img/Login/Login.png" alt="Escudo"  />
     </div>
-    <form class="form"  (ngSubmit)="onSubmit()">
+    <form class="form"  [formGroup]="registroForm" (ngSubmit)="onSubmit()">
         <h2>Crear Nueva Cuenta</h2>
-      <div class="form-group">
-        <label for="nombre">Nombre</label>
-        <input
-          id="nombre"
-          formControlName="nombre"
-          type="text"
-          placeholder="Tu nombre"
-        />
-      </div>
+      
       <div class="form-group">
         <label for="correo">Correo</label>
         <input
