--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,16 @@
 <div>
-  @if(!isAdminRoute()){
-    @if (open){
-      <button (click) = "toggleOpen()"><fa-icon [icon]="faX"></fa-icon></button>
-    }@else{
-      <button (click) = "toggleOpen()"><fa-icon [icon]="faBars"></fa-icon></button>
-    }
-  <app-menu-mobile [ngClass]="{'hidden': !open}" />
+  @if(!isAdminRoute()){ @if (open){
+  <button (click)="toggleOpen()"><fa-icon [icon]="faX"></fa-icon></button>
+  }@else{
+  <button (click)="toggleOpen()"><fa-icon [icon]="faBars"></fa-icon></button>
+  }
+  <app-menu-mobile [ngClass]="{ hidden: !open }" />
   <app-navbar />
   }
   <main>
     <router-outlet />
     @if(!isAdminRoute()){
-      <app-footer />
+    <app-footer />
     }
   </main>
-
 </div>
