Added new image for home page

--- a/src/app/home/home-header/home-header.component.html
+++ b/src/app/home/home-header/home-header.component.html
@@ -1,5 +1,10 @@
-<section>
-  <h2>Conoce más sobre</h2>
-  <h1>Comités Comunales de Emergencias</h1>
-  <h2>en el cantón de Golfito</h2>
+<section class="hero-section">
+  <div class="hero-image">
+    <img src="https://munidegolfito.go.cr/images/2021/07/22/puntarenitas22001.jpg" alt="Background Image">
+  </div>
+  <div class="hero-text">
+    <h2>Conoce más sobre</h2>
+    <h1>Comités Comunales de Emergencias</h1>
+    <h2>en el cantón de Golfito</h2>
+  </div>
 </section>
