--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,9 +5,9 @@
   <section>
     
     <span routerLink='/dashboard' routerLinkActive='active'>Inicio</span>
-    <span routerLink='/cce' routerLinkActive='active'>Comité Comunal</span>
+    <span routerLink='/cce' routerLinkActive='active'>Comités Comunales</span>
     <span routerLink='/albergues' routerLinkActive='active'>Albergues</span>
-    <span routerLink='/directorio' routerLinkActive='active'>Directorio</span>
+    <span routerLink='/directorio' routerLinkActive='active'>Comité Municipal</span>
     <span routerLink='/acerca' routerLinkActive='active'>Acerca de</span>
   </section>
 </nav>
